--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,21 +6,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="20dp"
     android:background="@color/white"
-    tools:context="com.example.comp1786cw1project3.feature.homepage.HomeFragment">
+    tools:context="com.example.comp1786cw1project3.feature.fragment.HomeFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvTrips"
+        android:id="@+id/recyclerViewTripList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginVertical="20dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/lnSearch"
+        app:layout_constraintBottom_toTopOf="@id/linearLayoutSearch"
         tools:itemCount="5"
         tools:listitem="@layout/item_trip"/>
 
     <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/lnSearch"
+        android:id="@+id/linearLayoutSearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -28,7 +28,7 @@
         android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toTopOf="@id/btnSearch">
         <androidx.appcompat.widget.LinearLayoutCompat
-            android:id="@+id/lnEdtSearch"
+            android:id="@+id/linearEditTextSearch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -72,10 +72,10 @@
         android:fontFamily="@font/roboto_bold"
         android:textSize="20sp"
         android:background="@drawable/button_search_background"
-        app:layout_constraintBottom_toTopOf="@id/btnReset"/>
+        app:layout_constraintBottom_toTopOf="@id/btnClearDatabase"/>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnReset"
+        android:id="@+id/btnClearDatabase"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_weight="1"
