--- a/app/src/main/res/layout/item_trip.xml
+++ b/app/src/main/res/layout/item_trip.xml
@@ -11,7 +11,7 @@
     android:background="@drawable/item_trip_background">
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvTripName"
+        android:id="@+id/tvNameOfTrip"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -31,6 +31,6 @@
         android:fontFamily="@font/roboto_bold"
         android:textSize="20sp"
         android:textColor="@color/black"
-        app:layout_constraintTop_toBottomOf="@+id/tvTripName"
+        app:layout_constraintTop_toBottomOf="@+id/tvNameOfTrip"
         app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
